src/migration/sea_orm/timestamp/snapshots/roadster__migration__sea_orm__timestamp__tests__add_update_timestamp_function_dep_column@case_1.snap
---
source: src/migration/sea_orm/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "\nCREATE OR REPLACE FUNCTION update_timestamp_password_updated_at() RETURNS TRIGGER AS $$\nBEGIN\n    IF OLD.password IS DISTINCT FROM NEW.password THEN\n        NEW.password_updated_at = NOW();\n    END IF;\n    RETURN NEW;\nEND;\n$$ language 'plpgsql';\n",
        values: None,
        db_backend: Postgres,
    },
)
